# circuit-breaker

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  REFACTORING_PLAN.md  RENAMING_GUIDE.md  SCHEMA_REFACTORING_COMPLETE.md  SDK_COVERAGE_ANALYSIS.md  SDK_FEATURE_PARITY_VERIFICATION.md  SUBSCRIPTION_IMPLEMENTATION_COMPLETE.md  SUBSCRIPTION_INFRASTRUCTURE_PLAN.md  package.json  setup.sh  test_models_endpoint.sh  test_ollama.sh
docs/: AGENT_CONFIGURATION.md  CIRCUIT_BREAKER_SERVER_GUIDE.md  CLI.md  EXECUTIVE_SUMMARY.md  FUNCTION_RUNNER.md  MCP_CLI_IMPLEMENTATION_SUMMARY.md  MCP_TOOL_DEFINITIONS.md  MULTI_TENANT_AGENT_PRD.md  NATS_COMPREHENSIVE_GUIDE.md  NATS_IMPLEMENTATION.md  NATS_TIMING_IMPROVEMENTS.md  NATS_USAGE.md  OPENROUTER_ALTERNATIVE.md  REMOTE_MCP_OAUTH_EXAMPLE.md  RULES_ENGINE.md  SECURE_AGENT_JWT_EXAMPLE.md  SECURE_MCP_SERVER.md  SERVER_GUIDE.md  SMART_ROUTING_EXAMPLES.md  STREAMING_ARCHITECTURE.md  STREAMING_COMPARISON.md  STREAMING_IMPLEMENTATION.md  STREAMING_SUMMARY.md  VLLM_EC2_SETUP.md  VLLM_INTEGRATION.md  WEBHOOK_INTEGRATION_PATTERNS.md  multi-provider-implementation.md
examples/: STREAMING_DEMOS.md  cli-config-example.json  websocket_stream_test.rs
examples/rust/: SDK_IMPLEMENTATION.md  basic_workflow.rs  cli_usage_demo.rs  function_demo.rs  graphql_client.rs  llm_router_demo.rs  mcp_cli.rs  multi_provider_demo.rs  nats_demo.rs  ollama_provider_test.rs  places_ai_agent_demo.rs  remote_mcp_oauth.rs  rules_engine_demo.rs  secure_agent_jwt.rs  streaming_architecture_demo.rs  test_vllm_streaming.rs  token_demo.rs  verify_providers.rs  vllm_provider_test.rs
examples/typescript/: LLM_ROUTER_README.md  README.md  STREAMING_IMPLEMENTATION.md  basic_workflow.ts  basic_workflow_backup.ts  function_demo.ts  graphql_client.ts  llm_router_demo.ts  multi_provider_demo.ts  nats_demo.ts  ollama_provider_test.ts  package-lock.json  package.json  places_ai_agent_demo.ts  places_ai_agent_demo_simple.ts  remote_mcp_oauth.ts  rules_engine_demo.ts  secure_agent_jwt.ts  states_ai_agent_demo.ts  streaming_architecture_demo.ts  test_vllm_streaming.ts  token_demo.ts  tsconfig.json
schema/: README.md  agents.graphql  analytics.graphql  llm.graphql  mcp.graphql  nats.graphql  rules.graphql  schemas.md  subscriptions.graphql  types.graphql  validate.sh  workflow.graphql
schema/examples/: agents-examples.js  analytics-examples.js  llm-examples.js  mcp-examples.js  nats-examples.js  package.json  rules-examples.js  workflow-examples.js
schema/operations/: agents.graphql  analytics.graphql  llm.graphql  mcp.graphql  nats.graphql  rules.graphql  workflow.graphql
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: README.md  agent_execution_demo.rs  analytics_demo.rs  basic_usage.rs  compilation_test.rs  multi_provider_demo.rs  nats_demo.rs  simple_streaming_demo.rs  smart_routing_demo.rs  subscription_demo.rs
sdk/rust/src/: agents.rs  analytics.rs  client.rs  functions.rs  lib.rs  llm.rs  mcp.rs  nats.rs  resources.rs  rules.rs  schema.rs  subscriptions.rs  types.rs  workflows.rs
sdk/typescript/: README.md  package-lock.json  package.json  test-connection.ts  test-streaming.ts  test-virtual-models.ts  tsconfig.json
sdk/typescript/docs/: MIGRATION_STATUS.md  MIGRATION_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  RESOURCE_MANAGER.md  RULES_ENGINE.md  SDK_IMPLEMENTATION.md  llm-router.md
sdk/typescript/examples/: README.md  analytics-demo.ts  basic-usage.ts  basic-workflow-original.ts  basic-workflow.ts  function-demo.ts  function-management.ts  graphql-client.ts  multi-provider-demo.ts  nats-demo.ts  resource-management.ts  rules-engine-demo.ts  rules-engine.ts  smart-routing-demo.ts  streaming-architecture-demo.ts  subscription-demo.ts  token-demo.ts  workflow-management.ts
sdk/typescript/examples/agents/: agent-examples.ts  states-ai-agent-demo-simple.ts
sdk/typescript/examples/llm/: basic-usage.ts  vllm-provider-test.ts
sdk/typescript/src/: agents.ts  analytics.ts  client.ts  functions.ts  index.ts  llm.ts  mcp.ts  nats.ts  resources.ts  rules.ts  schema.ts  sse.test.ts  sse.ts  subscriptions.ts  types.ts  workflows.ts
sdk/typescript/src/agents/: builder.ts  conversational.ts  state-machine.ts
sdk/typescript/src/core/: client.ts  errors.ts  types.ts
sdk/typescript/src/functions/: builder.ts  index.ts  manager.ts
sdk/typescript/src/llm/: builder.ts  providers.ts  router.ts  streaming.ts
sdk/typescript/src/resources/: builder.ts  index.ts  manager.ts
sdk/typescript/src/rules/: builder.ts  engine.ts  index.ts
sdk/typescript/src/utils/: graphql.ts  logger.ts
sdk/typescript/src/workflow/: builder.ts  manager.ts
setup/: README.md  cli-demo.sh  cli-utils.sh  setup_ollama.sh  setup_vllm.sh  setup_vllm_ec2.sh
src/: lib.rs
src/api/: handlers.rs  mcp_auth.rs  mcp_oauth_setup.rs  mcp_server.rs  mcp_storage.rs  mcp_types.rs  mod.rs  oauth.rs  types.rs
src/api/agents/: http_handlers.rs  http_handlers_tests.rs  middleware.rs  mod.rs  nats_storage.rs  nats_storage_tests.rs  tenant_isolation.rs  tenant_isolation_tests.rs  tenant_storage.rs  tests.rs  websocket_handlers.rs  websocket_tests.rs
src/engine/: agents.rs  events.rs  functions.rs  graphql.rs  mod.rs  nats_storage.rs  rules.rs  storage.rs
src/llm/: cost.rs  mod.rs  providers.rs  router.rs  security.rs  sse.rs  streaming.rs  traits.rs
src/llm/providers/: mod.rs
src/llm/providers/anthropic/: client.rs  config.rs  mod.rs  types.rs
src/llm/providers/google/: client.rs  config.rs  mod.rs  types.rs
src/llm/providers/ollama/: README.md  client.rs  config.rs  mod.rs  types.rs
src/llm/providers/openai/: client.rs  config.rs  mod.rs  types.rs
src/llm/providers/vllm/: client.rs  config.rs  mod.rs  types.rs
src/models/: activity.rs  agent.rs  function.rs  mod.rs  place.rs  resource.rs  rule.rs  state.rs  token.rs  transition.rs  workflow.rs
src/server/: graphql.rs  mod.rs  playground.html
test_keys/: README.md  test.pem  test.pub
