[package]
name = "circuit_breaker"
version = "0.1.0"
edition = "2021"

# Binary targets
[[bin]]
name = "server"
path = "src/bin/server.rs"


[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# GraphQL - using compatible versions
async-graphql = "6.0"
async-graphql-axum = "6.0"

# Web framework - using compatible version
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# NATS for distributed state
async-nats = "0.34"

# HTTP client for GraphQL examples
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"
dotenv = "0.15"

# Examples - Client examples only (no servers)
[[example]]
name = "basic_workflow"
path = "examples/rust/basic_workflow.rs"

[[example]]
name = "token_demo"
path = "examples/rust/token_demo.rs"

[[example]]
name = "graphql_client"
path = "examples/rust/graphql_client.rs"

[[example]]
name = "rules_engine_demo"
path = "examples/rust/rules_engine_demo.rs"

[[example]]
name = "function_demo"
path = "examples/rust/function_demo.rs"

[[example]]
name = "places_ai_agent_demo"
path = "examples/rust/places_ai_agent_demo.rs"

[[example]]
name = "nats_demo"
path = "examples/rust/nats_demo.rs"

[[example]]
name = "nats_timing_test"
path = "examples/nats_timing_test.rs"

[[example]]
name = "nats_debug_token_search"
path = "examples/nats_debug_token_search.rs"