[package]
name = "circuit_breaker"
version = "0.1.0"
edition = "2021"

# Binary targets
[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "admin"
path = "src/bin/admin.rs"




[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# GraphQL - using compatible versions
async-graphql = "6.0"
async-graphql-axum = "6.0"

# Web framework - using compatible version
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# NATS for distributed state
async-nats = "0.34"

# HTTP client for GraphQL examples and LLM providers
reqwest = { version = "0.11", features = ["json", "stream"] }

# SSE and streaming support
eventsource-stream = "0.2"
pin-project-lite = "0.2"
bytes = "1.0"
tokio-util = "0.7"

# WebSocket for real-time streaming
tokio-tungstenite = "0.20"

# LLM Provider integrations
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"
url = "2.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI parsing
clap = { version = "4.0", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Database support for credentials
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Security and encryption
ring = "0.16"
jsonwebtoken = "8.3"

[dev-dependencies]
tokio-test = "0.4"

# Examples - Client examples only (no servers)
[[example]]
name = "basic_workflow"
path = "examples/rust/basic_workflow.rs"

[[example]]
name = "token_demo"
path = "examples/rust/token_demo.rs"

[[example]]
name = "graphql_client"
path = "examples/rust/graphql_client.rs"

[[example]]
name = "rules_engine_demo"
path = "examples/rust/rules_engine_demo.rs"

[[example]]
name = "function_demo"
path = "examples/rust/function_demo.rs"

[[example]]
name = "places_ai_agent_demo"
path = "examples/rust/places_ai_agent_demo.rs"

[[example]]
name = "nats_demo"
path = "examples/rust/nats_demo.rs"

[[example]]
name = "multi_provider_demo"
path = "examples/rust/multi_provider_demo.rs"

[[example]]
name = "verify_providers"
path = "examples/rust/verify_providers.rs"

[[example]]
name = "llm_router_demo"
path = "examples/rust/llm_router_demo.rs"

[[example]]
name = "websocket_stream_test"
path = "examples/rust/websocket_stream_test.rs"

[[example]]
name = "streaming_architecture_demo"
path = "examples/rust/streaming_architecture_demo.rs"

[[example]]
name = "ollama_provider_test"
path = "examples/rust/ollama_provider_test.rs"

[[example]]
name = "vllm_provider_test"
path = "examples/rust/vllm_provider_test.rs"

[[example]]
name = "test_vllm_streaming"
path = "examples/rust/test_vllm_streaming.rs"
